--- a/_sources/DataUNderstanding.ipynb
+++ b/_sources/DataUNderstanding.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "5eec0948",
    "metadata": {},
    "outputs": [
@@ -29,10 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pymysql in /usr/local/python/3.12.1/lib/python3.12/site-packages (1.1.2)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n",
+      "Requirement already satisfied: pymysql in c:\\users\\acer\\appdata\\roaming\\python\\python313\\site-packages (1.1.1)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "DATA SQL\n",
       "(1, 'Iris-setosa', 5.1, 3.5, 1.4, 0.2)\n",
@@ -194,17 +191,17 @@
     "\n",
     "# Koneksi ke MySQL\n",
     "mysql_conn = pymysql.connect(\n",
-    "    host=\"mysql-28cb1d4c-yotanalvintobing-psd.d.aivencloud.com\",\n",
+    "    host=\"mysql-3c768195-aqbilbaraka.d.aivencloud.com\",\n",
     "    user=\"avnadmin\",\n",
-    "    password=\"AVNS_e3Tzp6XE6YCGJ7fV9ku\",\n",
+    "    password=\"AVNS_WV9i6KvYoQZ3s6FclWP\",\n",
     "    database=\"defaultdb\",\n",
-    "    port=25478,\n",
+    "    port=16932,\n",
     "    ssl={\"ssl\": {}}\n",
     ")\n",
     "mysql_cur = mysql_conn.cursor()\n",
     "\n",
     "# Eksekusi query untuk mengambil data dari MySQL\n",
-    "query_mysql = \"SELECT * FROM iris_db\"\n",
+    "query_mysql = \"SELECT * FROM irismysql\"\n",
     "mysql_cur.execute(query_mysql)\n",
     "data_mysql = mysql_cur.fetchall()\n",
     "\n",
@@ -228,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "667df228",
    "metadata": {},
    "outputs": [
@@ -236,15 +233,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting psycopg2-binary\n",
-      "  Downloading psycopg2_binary-2.9.10-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (4.9 kB)\n",
-      "Downloading psycopg2_binary-2.9.10-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.0 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.0/3.0 MB\u001b[0m \u001b[31m40.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: psycopg2-binary\n",
-      "Successfully installed psycopg2-binary-2.9.10\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n",
+      "Requirement already satisfied: psycopg2-binary in c:\\laragon\\bin\\python\\python-3.13\\lib\\site-packages (2.9.10)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "DATA POSTGRESQL\n",
       "(1, 'Iris-setosa', 5.1, 3.5, 1.4, 0.2)\n",
@@ -408,14 +397,14 @@
     "pg_conn = psycopg2.connect(\n",
     "    dbname=\"defaultdb\",\n",
     "    user=\"avnadmin\",\n",
-    "    password=\"AVNS_riLCh2YBN7jyLWPgMLi\",\n",
-    "    host=\"pg-132def6-yotanalvintobing-psd.d.aivencloud.com\",\n",
-    "    port=\"25478\"\n",
+    "    password=\"AVNS_Cq_rz3j4QTiiunKJ08p\",\n",
+    "    host=\"pg-17afc059-aqbilbaraka.d.aivencloud.com\",\n",
+    "    port=\"16932\"\n",
     ")\n",
     "pg_cur = pg_conn.cursor()\n",
     "\n",
     "# Eksekusi query untuk mengambil data dari PostgreSQL\n",
-    "query_pg = \"SELECT * FROM iris_db_postgre\"\n",
+    "query_pg = \"SELECT * FROM irispostgresql\"\n",
     "pg_cur.execute(query_pg)\n",
     "data_postgresql = pg_cur.fetchall()\n",
     "\n",
@@ -1313,7 +1302,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1327,7 +1316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
