--- a/_sources/DataUNderstanding.ipynb
+++ b/_sources/DataUNderstanding.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "5eec0948",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pymysql in c:\\users\\acer\\appdata\\roaming\\python\\python313\\site-packages (1.1.1)\n",
+      "Requirement already satisfied: pymysql in /usr/local/python/3.12.1/lib/python3.12/site-packages (1.1.2)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "DATA SQL\n",
       "(1, 'Iris-setosa', 5.1, 3.5, 1.4, 0.2)\n",
@@ -191,17 +194,17 @@
     "\n",
     "# Koneksi ke MySQL\n",
     "mysql_conn = pymysql.connect(\n",
-    "    host=\"mysql-3c768195-aqbilbaraka.d.aivencloud.com\",\n",
+    "    host=\"mysql-28cb1d4c-yotanalvintobing-psd.d.aivencloud.com\",\n",
     "    user=\"avnadmin\",\n",
-    "    password=\"AVNS_WV9i6KvYoQZ3s6FclWP\",\n",
+    "    password=\"AVNS_e3Tzp6XE6YCGJ7fV9ku\",\n",
     "    database=\"defaultdb\",\n",
-    "    port=16932,\n",
+    "    port=25478,\n",
     "    ssl={\"ssl\": {}}\n",
     ")\n",
     "mysql_cur = mysql_conn.cursor()\n",
     "\n",
     "# Eksekusi query untuk mengambil data dari MySQL\n",
-    "query_mysql = \"SELECT * FROM irismysql\"\n",
+    "query_mysql = \"SELECT * FROM iris_db\"\n",
     "mysql_cur.execute(query_mysql)\n",
     "data_mysql = mysql_cur.fetchall()\n",
     "\n",
@@ -1302,7 +1305,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1316,7 +1319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
