--- a/_sources/DataUNderstanding.ipynb
+++ b/_sources/DataUNderstanding.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "5eec0948",
    "metadata": {},
    "outputs": [
@@ -29,18 +29,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pymysql in /usr/local/python/3.12.1/lib/python3.12/site-packages (1.1.2)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Collecting python-dotenv\n",
-      "  Downloading python_dotenv-1.1.1-py3-none-any.whl.metadata (24 kB)\n",
-      "Downloading python_dotenv-1.1.1-py3-none-any.whl (20 kB)\n",
-      "Installing collected packages: python-dotenv\n",
-      "\u001b[33m  WARNING: The script dotenv is installed in '/usr/local/python/3.12.1/bin' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\u001b[33m\n",
-      "\u001b[0mSuccessfully installed python-dotenv-1.1.1\n",
+      "Requirement already satisfied: pymysql in /usr/local/python/3.12.1/lib/python3.12/site-packages (1.1.2)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.2\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n",
@@ -201,26 +196,22 @@
    ],
    "source": [
     "%pip install pymysql\n",
-    "%pip install python-dotenv\n",
-    "\n",
-    "from dotenv import load_dotenv\n",
-    "import os\n",
     "import pymysql\n",
     "\n",
-    "# Load environment variables dari file .env\n",
-    "load_dotenv()\n",
-    "\n",
+    "# Koneksi ke MySQL\n",
     "mysql_conn = pymysql.connect(\n",
-    "    host=os.getenv(\"MYSQL_HOST\"),\n",
-    "    user=os.getenv(\"MYSQL_USER\"),\n",
-    "    password=os.getenv(\"MYSQL_PASSWORD\"),\n",
-    "    database=os.getenv(\"MYSQL_DB\"),\n",
-    "    port=int(os.getenv(\"MYSQL_PORT\")),\n",
+    "    host=\"mysql-28cb1d4c-yotanalvintobing-psd.d.aivencloud.com\",\n",
+    "    user=\"avnadmin\",\n",
+    "    password=\"AVNS_e3Tzp6XE6YCGJ7fV9ku\",\n",
+    "    database=\"defaultdb\",\n",
+    "    port=25478,\n",
     "    ssl={\"ssl\": {}}\n",
     ")\n",
-    "\n",
     "mysql_cur = mysql_conn.cursor()\n",
-    "mysql_cur.execute(\"SELECT * FROM iris_db\")\n",
+    "\n",
+    "# Eksekusi query untuk mengambil data dari MySQL\n",
+    "query_mysql = \"SELECT * FROM iris_db\"\n",
+    "mysql_cur.execute(query_mysql)\n",
     "data_mysql = mysql_cur.fetchall()\n",
     "\n",
     "# Menampilkan data dari MySQL\n",
