--- a/_sources/PlotingData.ipynb
+++ b/_sources/PlotingData.ipynb
@@ -19,9 +19,9 @@
         "id": "Nux25e5kWjrM"
       },
       "source": [
-        "### Mendownload Dataset Ecoli dari UCI [https://archive.ics.uci.edu/](https://archive.ics.uci.edu/dataset/39/ecoli)\n",
+        "### Mendownload Dataset Ecoli dari UCI [https://archive.ics.uci.edu/dataset/39/ecoli](https://archive.ics.uci.edu/dataset/39/ecoli)\n",
         "\n",
-        "Kunjungi halaman UCI berikut untuk mendapatkan dataset Ecoli,setelah itu lanjutkan dengan menekan tombol download"
+        "Kunjungi halaman UCI berikut untuk mendapatkan dataset Ecoli,setelah itu lanjutkan dengan menekan tombol download untuk mendownload datasetnya"
       ]
     },
     {
@@ -93,7 +93,7 @@
         "id": "ihqXgyGRdbby"
       },
       "source": [
-        "### Membuat Database Mysql\n",
+        "### Membuat Database Mysql dan Menyimpan datanya\n",
         "Proses pembuatan database Mysql menggunakan database cloud [aiven.io](https://aiven.io/) dan dbeaver sebagai tempat untuk menyimpan suatu datanya. kemudian mengkoneksikan aiven ke dbeaver melalui kredensial yang dimiliki project aiven. Selanjutnya, membuat database pada service dan mengimport data dalam bentuk csv..  \n",
         "\n"
       ]
