--- a/_sources/PlotingData.ipynb
+++ b/_sources/PlotingData.ipynb
@@ -9,7 +9,7 @@
         "## Penyeimbangan Data Ecoli\n",
         "\n",
         "\n",
-        "Penyeimbangan data Ecoli dilakukan untuk mengatasi masalah ketidakseimbangan kelas, di mana jumlah data pada kelas mayoritas jauh lebih banyak dibandingkan kelas minoritas. Jika dibiarkan, model machine learning cenderung bias dengan hanya mengenali kelas mayoritas, sementara kelas minoritas—yang justru sering memiliki informasi biologis penting—terabaikan. Dengan menyeimbangkan data, distribusi antar kelas menjadi lebih adil sehingga model mampu belajar secara seimbang\n",
+        "Penyeimbangan data Ecoli dilakukan untuk mengatasi masalah ketidakseimbangan kelas, di mana jumlah data pada kelas mayoritas jauh lebih banyak dibandingkan kelas minoritas. Jika dibiarkan, model machine learning cenderung bias dengan hanya mengenali kelas mayoritas, sementara kelas minoritas yang justru sering memiliki informasi biologis penting terabaikan. Dengan menyeimbangkan data, distribusi antar kelas menjadi lebih adil sehingga model mampu belajar secara seimbang\n",
         "\n"
       ]
     },
@@ -159,7 +159,7 @@
         "\n",
         "Data Ecoli tersebut akan disimpan pada Dbeaver dan akan dikoneksikan kepada [aiven.io](https://aiven.io/)\n",
         "\n",
-        "berikut adalah cara membuat database Mysql dan Postgresql di Dbeaver\n",
+        "berikut adalah cara membuat database Mysql di Dbeaver\n",
         "\n",
         "\n",
         "\n",
@@ -172,7 +172,7 @@
         "\n",
         "\n",
         "*   Setelah tabel terbuat. Insert data MySQL dengan data Ecoli,\n",
-        "### SImpan Dataset Ecoli didalan Mysql\n",
+        "### Simpan Dataset Ecoli didalam Mysql\n",
         "\n",
         "\n",
         "\n",
