--- a/_sources/PreprocessingData.ipynb
+++ b/_sources/PreprocessingData.ipynb
@@ -17,7 +17,7 @@
         "id": "hir1toXPdtXa"
       },
       "source": [
-        "## Deteksi Oulier Menggunakan Data Iris di Power BI\n",
+        "### Deteksi Oulier Menggunakan Data Iris di Power BI\n",
         "\n",
         "Pada Power BI, pergi ke menu Transform Data -> Transform -> Run Python Script"
       ]
@@ -28,7 +28,7 @@
         "id": "eWYlE7Jrd2xp"
       },
       "source": [
-        "## Model Deteksi Outlier ABOD\n",
+        "### Model Deteksi Outlier ABOD\n",
         "\n",
         "Teknik ini didasarkan pada gagasan untuk mengawasi sudut yang dibentuk oleh sekumpulan tiga titik data dalam ruang fitur multivariat. Teknik outlier berbasis sudut (ABOD) bekerja cukup baik dalam ruang berdimensi tinggi.\n",
         "\n",
@@ -76,7 +76,7 @@
         "\n",
         "7.  Muat data outlier pada Power BI dengan menuliskan kembali variabel yang menyimpan proses seperti ‘data_anomaly’.\n",
         "\n",
-        "## Hasil deteksi Outlier Pada Power BI menggunakan Metode ABOD"
+        "### Hasil deteksi Outlier Pada Power BI menggunakan Metode ABOD"
       ]
     },
     {
@@ -103,7 +103,7 @@
         "id": "5sZ7-6GdfNCR"
       },
       "source": [
-        "## Model Deteksi Outlier menggunakan KNN\n",
+        "### Model Deteksi Outlier menggunakan KNN\n",
         "\n",
         "KNN atau K-Nearest Neighbours merupakan algoritma klasifikasi berdasarkan jarak dengan cara mengukur kedekatan masing-masing data berdasarkan nilai k. KNN juga dapat digunakan untuk menedeteksi outlier dengan cara mencari rata-rata terbesar untuk mendeteksinya.\n",
         "\n",
@@ -152,7 +152,7 @@
         "\n",
         "7. Muat data outlier pada Power BI dengan menuliskan kembali variabel yang menyimpan proses seperti ‘data_anomaly’.\n",
         "\n",
-        "## Hasil deteksi Outlier Pada Power BI menggunakan Metode KNN"
+        "### Hasil deteksi Outlier Pada Power BI menggunakan Metode KNN"
       ]
     },
     {
@@ -179,7 +179,7 @@
         "id": "ZehgBN52loL8"
       },
       "source": [
-        "## Model Deteksi Outlier LOF\n",
+        "### Model Deteksi Outlier LOF\n",
         "\n",
         "Local Outlier Factor (LOF) adalah sebuah metode untuk mendeteksi outlier dengan cara membandingkan kepadatan suatu data dengan kepadatan data di sekitarnya. Jika sebuah data berada di area yang jauh lebih jarang atau kurang padat dibanding tetangga terdekatnya, maka data tersebut dianggap sebagai outlier. Nilai LOF mendekati 1 menunjukkan bahwa data normal, sedangkan nilai LOF yang jauh lebih besar dari 1 menunjukkan potensi outlier.\n",
         "\n",
@@ -228,7 +228,7 @@
         "\n",
         "7. Muat data outlier pada Power BI dengan menuliskan kembali variabel yang menyimpan proses seperti ‘data_anomaly’.\n",
         "\n",
-        "## Hasil Pendeteksian Outlier Pada Power BI menggunakan Metode LOF"
+        "### Hasil Pendeteksian Outlier Pada Power BI menggunakan Metode LOF"
       ]
     },
     {
@@ -255,7 +255,7 @@
         "id": "H8nbnur0nWUB"
       },
       "source": [
-        "## Menghapus Data Outlier pada Iris di Power BI\n",
+        "### Menghapus Data Outlier pada Iris di Power BI\n",
         "\n",
         "Pada Power BI, pergi ke menu Transform Data -> Transform -> Run Python Script\n",
         "\n",
