--- a/_sources/PlotingData.ipynb
+++ b/_sources/PlotingData.ipynb
@@ -1604,7 +1604,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Perbandingan Sebelum dan sesudah SMOTE"
+        "### Perbandingan Random forest Sebelum dan sesudah SMOTE"
       ]
     },
     {
