--- a/_sources/BUbanyuwangi.ipynb
+++ b/_sources/BUbanyuwangi.ipynb
@@ -1,6 +1,13 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Melakukan koneksi ke copernicus Data Space"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -1377,18 +1384,6 @@
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
       "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.12.1"
     }
   },
   "nbformat": 4,
