--- a/_sources/Suara.ipynb
+++ b/_sources/Suara.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "69cc677a",
+   "metadata": {},
+   "source": [
+    "## Data Understanding & Exploratory Data Analysis Suara Buka Tutup\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "e1e6c0f1",
