--- a/_sources/Suarapreprocess.ipynb
+++ b/_sources/Suarapreprocess.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "6eb98874",
    "metadata": {},
    "outputs": [],
@@ -19,15 +19,30 @@
     "import librosa\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import IPython.display as ipd\n",
-    "\n",
-    "TRAIN_DIR = \"dataset48k/train\"\n",
-    "VAL_DIR   = \"dataset48k/val\"\n",
-    "\n",
-    "# Parameter preprocessing\n",
-    "TARGET_SR = 22050         # target sample rate\n",
-    "TARGET_DURATION = 1.0     # target durasi 1 detik\n",
-    "MAX_LEN = int(TARGET_SR * TARGET_DURATION)"
+    "import IPython.display as ipd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "961e9495",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'audio_stats' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Menghapus baris dengan data NaN atau invalid\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m audio_stats_clean = \u001b[43maudio_stats\u001b[49m.dropna(subset=[\u001b[33m'\u001b[39m\u001b[33mfile\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mlabel\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mduration\u001b[39m\u001b[33m'\u001b[39m])\n",
+      "\u001b[31mNameError\u001b[39m: name 'audio_stats' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Menghapus baris dengan data NaN atau invalid\n",
+    "audio_stats_clean = audio_stats.dropna(subset=['file', 'label', 'duration'])\n"
    ]
   },
   {
@@ -499,7 +514,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
