--- a/_sources/Suaralanjutana.ipynb
+++ b/_sources/Suaralanjutana.ipynb
@@ -852,6 +852,62 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0540939",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "import random\n",
+    "\n",
+    "# Tentukan direktori sumber dan tujuan\n",
+    "TRAIN_DIR = '/path/to/train'  # Ganti dengan path ke direktori train Anda\n",
+    "VAL_DIR = '/path/to/validation'  # Ganti dengan path ke direktori validation Anda\n",
+    "\n",
+    "# Membuat direktori validation jika belum ada\n",
+    "os.makedirs(VAL_DIR, exist_ok=True)\n",
+    "\n",
+    "# Definisikan rasio pembagian\n",
+    "split_ratio = 0.2  # 20% untuk validation, sisanya untuk training\n",
+    "\n",
+    "# Fungsi untuk membagi data menjadi train dan validation\n",
+    "def split_data(source_dir, target_dir, split_ratio=0.2):\n",
+    "    for label in os.listdir(source_dir):\n",
+    "        label_path = os.path.join(source_dir, label)\n",
+    "        if os.path.isdir(label_path):  # Pastikan label adalah direktori\n",
+    "            # Buat folder label di direktori validation\n",
+    "            val_label_path = os.path.join(target_dir, label)\n",
+    "            os.makedirs(val_label_path, exist_ok=True)\n",
+    "            \n",
+    "            for subfolder in ['buka', 'tutup']:  # Sesuaikan dengan struktur folder Anda\n",
+    "                subfolder_path = os.path.join(label_path, subfolder)\n",
+    "                if os.path.isdir(subfolder_path):\n",
+    "                    # Buat subfolder buka dan tutup di validation\n",
+    "                    val_subfolder_path = os.path.join(val_label_path, subfolder)\n",
+    "                    os.makedirs(val_subfolder_path, exist_ok=True)\n",
+    "                    \n",
+    "                    # Ambil daftar file WAV dalam subfolder\n",
+    "                    files = [f for f in os.listdir(subfolder_path) if f.endswith('.wav')]\n",
+    "                    random.shuffle(files)  # Acak file agar pembagian acak\n",
+    "                    num_val = int(len(files) * split_ratio)  # Tentukan berapa banyak file untuk validasi\n",
+    "                    val_files = files[:num_val]  # Ambil file untuk validation\n",
+    "                    train_files = files[num_val:]  # Sisanya untuk training\n",
+    "                    \n",
+    "                    # Salin file ke folder tujuan\n",
+    "                    for file in val_files:\n",
+    "                        shutil.copy(os.path.join(subfolder_path, file), os.path.join(val_subfolder_path, file))\n",
+    "\n",
+    "                    print(f\"Moved {len(val_files)} files from {subfolder_path} to {val_subfolder_path}\")\n",
+    "\n",
+    "# Memanggil fungsi untuk membagi data\n",
+    "split_data(TRAIN_DIR, VAL_DIR, split_ratio)\n",
+    "\n",
+    "print(\"Pembagian data train dan validation selesai.\")\n"
+   ]
   }
  ],
  "metadata": {
