--- a/_sources/DeploySuara.ipynb
+++ b/_sources/DeploySuara.ipynb
@@ -13,7 +13,7 @@
    "id": "133e34b6",
    "metadata": {},
    "source": [
-    "ini adalah link deployment program analisa suara buka tutup [https://suarabukatutup.streamlit.app/#c12906a1](https://suarabukatutup.streamlit.app/#c12906a1)"
+    "ini adalah link deployment program analisa suara buka tutup [https://suarabukatutup.streamlit.app/](https://suarabukatutup.streamlit.app/)"
    ]
   },
   {
