--- a/_sources/BUsuarapaus.ipynb
+++ b/_sources/BUsuarapaus.ipynb
@@ -106,6 +106,22 @@
     "\n",
     "* Visualisasi performa model dan interpretasi hasil."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea3adf9f",
+   "metadata": {},
+   "source": [
+    "5. Dampak Jangka Panjang"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8189655",
+   "metadata": {},
+   "source": [
+    "Model deteksi otomatis dapat diterapkan pada sistem pemantauan laut real-time (misalnya buoy sensor), sehingga upaya konservasi paus lebih adaptif dan responsif terhadap perubahan."
+   ]
   }
  ],
  "metadata": {
