update sedikit dari data understanding suara paus

--- a/_sources/DUsuarapaus.ipynb
+++ b/_sources/DUsuarapaus.ipynb
@@ -10,6 +10,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "992c6c29",
+   "metadata": {},
+   "source": [
+    "### Pemahaman data awal (RightWhalecalls)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38ce6e29",
+   "metadata": {},
+   "source": [
+    "**SUMBER DATA:**\n",
+    "Data ini berasal dari Marinexplore and Cornell University Whale Detection Challenge. dan bisa menemukan dataset atau challangenya  di kaggle pada link berikut:[https://www.kaggle.com/c/whale-detection-challenge/data](https://www.kaggle.com/c/whale-detection-challenge/data)\n",
+    "\n",
+    "**Tujuan dari data ini disediakan:**\n",
+    "mendeteksi “up-call” dari North Atlantic right whale (NARW) — yaitu suara “contact call” khas dari paus sikat (Right Whale). Deteksi otomatis ini berguna agar kapal atau sistem pemantauan bisa mengenali keberadaan paus dan mengurangi risiko tabrakan\n",
+    "\n",
+    "**Dari Mana Data Diambil (Sumber Perekaman):**\n",
+    "\n",
+    "* Hidrofon Tetap (Fixed Hydrophones): Ditempatkan di dasar laut di area migrasi atau makan paus sikat, merekam suara secara kontinu selama berbulan-bulan atau bertahun-tahun (misalnya, di lepas pantai Amerika Utara).\n",
+    "* Wahana Bergerak (Moored Buoys/Gliders): Pelampung atau glider bawah air yang dilengkapi hidrofon bergerak di area jelajah paus, mengumpulkan data dari berbagai lokasi.\n",
+    "* Tag Akustik (Acoustic Tags): Tag kecil yang dipasang di kulit paus untuk merekam suara mereka secara langsung dari dekat paus, memberikan data perilaku spesifik.\n",
+    "* Hidrofon Kapal (Ship-mounted Hydrophones): Perekaman saat kapal riset berlayar di perairan tempat paus berada, sering kali untuk mendeteksi keberadaan paus secara cepat.\n",
+    "\n",
+    "**Bagaimana Cara Mendapatkan Data (Metode Pengambilan & Analisis):**\n",
+    "\n",
+    "Pemasangan Hidrofon: Hidrofon diletakkan di area penting (feeding/breeding grounds) menggunakan kapal penelitian, diikat pada jangkar atau mengambang bebas.\n",
+    "1. Perekaman Data: Hidrofon terus-menerus merekam suara bawah air (noise ambient dan panggilan paus) ke dalam unit penyimpanan data.\n",
+    "2. Pengambilan Data: Data diambil secara berkala (bulanan/tahunan) atau dikirimkan secara real-time (untuk sistem yang terhubung satelit).\n",
+    "3. Analisis Spektral: Data suara diubah menjadi spektogram (visualisasi frekuensi vs waktu) untuk mengidentifikasi karakteristik panggilan (nada, durasi).\n",
+    "4. Deteksi Otomatis (Automated Detection): Algoritma komputer digunakan untuk secara otomatis mendeteksi dan mengklasifikasikan panggilan paus (misalnya, \"up-calls\", \"gunshots\") dari rekaman yang panjang.\n",
+    "Korelasi dengan Data Lain: Panggilan paus dikorelasikan dengan data visual (pengamatan paus), data pelacakan (GPS), dan data lingkungan (suhu air, aktivitas kapal) untuk memahami konteks perilaku."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bc074854",
    "metadata": {},
    "source": [
@@ -112,30 +148,6 @@
     "print(f\"Jumlah data TRAIN : {len(X_train)}\")\n",
     "print(f\"Jumlah data TEST  : {len(X_test)}\")\n",
     "print(f\"Panjang time series : {len(X_train[0])}\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d5b82950",
-   "metadata": {},
-   "source": [
-    "Suara paus sikat (right whale calls) diambil dari habitat alami mereka di laut menggunakan hidrofon (mikrofon bawah air) yang dipasang di dasar laut atau dibawa oleh pelampung/wahana bawah air, merekam panggilan unik paus untuk komunikasi, navigasi, dan perkawinan, lalu data akustik ini dianalisis untuk memahami populasi, perilaku, dan ancaman seperti tabrakan kapal, memberikan data vital bagi konservasi paus sikat.\n",
-    "\n",
-    "**Dari Mana Data Diambil (Sumber Perekaman)**\n",
-    "\n",
-    "* Hidrofon Tetap (Fixed Hydrophones): Ditempatkan di dasar laut di area migrasi atau makan paus sikat, merekam suara secara kontinu selama berbulan-bulan atau bertahun-tahun (misalnya, di lepas pantai Amerika Utara).\n",
-    "* Wahana Bergerak (Moored Buoys/Gliders): Pelampung atau glider bawah air yang dilengkapi hidrofon bergerak di area jelajah paus, mengumpulkan data dari berbagai lokasi.\n",
-    "* Tag Akustik (Acoustic Tags): Tag kecil yang dipasang di kulit paus untuk merekam suara mereka secara langsung dari dekat paus, memberikan data perilaku spesifik.\n",
-    "* Hidrofon Kapal (Ship-mounted Hydrophones): Perekaman saat kapal riset berlayar di perairan tempat paus berada, sering kali untuk mendeteksi keberadaan paus secara cepat.\n",
-    "\n",
-    "**Bagaimana Cara Mendapatkan Data (Metode Pengambilan & Analisis)**\n",
-    "\n",
-    "Pemasangan Hidrofon: Hidrofon diletakkan di area penting (feeding/breeding grounds) menggunakan kapal penelitian, diikat pada jangkar atau mengambang bebas.\n",
-    "1. Perekaman Data: Hidrofon terus-menerus merekam suara bawah air (noise ambient dan panggilan paus) ke dalam unit penyimpanan data.\n",
-    "2. Pengambilan Data: Data diambil secara berkala (bulanan/tahunan) atau dikirimkan secara real-time (untuk sistem yang terhubung satelit).\n",
-    "3. Analisis Spektral: Data suara diubah menjadi spektogram (visualisasi frekuensi vs waktu) untuk mengidentifikasi karakteristik panggilan (nada, durasi).\n",
-    "4. Deteksi Otomatis (Automated Detection): Algoritma komputer digunakan untuk secara otomatis mendeteksi dan mengklasifikasikan panggilan paus (misalnya, \"up-calls\", \"gunshots\") dari rekaman yang panjang.\n",
-    "Korelasi dengan Data Lain: Panggilan paus dikorelasikan dengan data visual (pengamatan paus), data pelacakan (GPS), dan data lingkungan (suhu air, aktivitas kapal) untuk memahami konteks perilaku."
    ]
   },
   {
@@ -278,6 +290,14 @@
     "plt.ylabel(\"Amplitude\")\n",
     "plt.grid(True)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d96cb8eb",
+   "metadata": {},
+   "source": [
+    "Penjelasan amplitudo suara"
    ]
   }
  ],
